--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-22  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/views.py (edit_user): Make use of Users ldap helper class.
+	Further, add group information to XML.
+
+2008-06-22  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/models.py (UserGroups, Users, Users.__init__, Users.groups):
 	Add UserGroups, representing an LDAP group. Make use of this group as
 	a lazily initialized property within the Users group.
