variables / attributes / whatever should be public, not private.
	* lib/ftpmirror.php (FTPMirror): variables / attributes / whatever
	should be public, not private.

svn path=/trunk/; revision=220

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-22  Olav Vitters  <olav@bkor.dhs.org>
+
+	* lib/ftpmirror.php (FTPMirror): variables / attributes / whatever
+	should be public, not private.
+
 2008-06-08  Olav Vitters  <olav@bkor.dhs.org>
 
 	* lib/util.php: Correctly throw the Exception.
