--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-22  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/models.py (Foundationmembers.Meta): Order the foundation
+	members by lastname, then firstname. This like the PHP version.
+
+2008-06-22  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/views.py (edit_mirror, list_foundationmembers): Make use of
 	get_object_or_404. Also give 404 error message when invalid page was
 	given.
