--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-06-23  Olav Vitters  <olav@bkor.dhs.org>
+
+	* mango/views.py (add_form_errors_to_xml, edit_mirror): Add new
+	function which checks if the form is valid. If not, it adds the errors
+	to the XML. Needs to be renamed to better clarify what it does. In
+	edit_mirror, make use of this helper function.
+	* www/list_ftpmirrors.xsl: Update link to new ftp mirror to follow
+	Django style.
+
 2008-06-22  Olav Vitters  <olav@bkor.dhs.org>
 
 	* mango/models.py (Foundationmembers, Ftpmirrors): Ensure first_added
