--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-06-23  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/models.py (LdapObject.search, Users.groups): Remove leftover
+	debug message. Further, optimize use of LDAP queries by only
+	requesting the cn of groups within the Users class.
+
+2008-06-23  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/views.py (list_users): Add pagination to list_users. This is
 	way more inefficient than normal models as LdapObject actually creates
 	an instance for every user, no matter if it is needed by the paginator
