--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
+
+	* mango/views.py (list_accounts): Add paginator to account request
+	overview. Further, only show pending setup accounts. Currently not
+	possible to change that.
+
 2008-06-23  Olav Vitters  <olav@bkor.dhs.org>
 
 	* mango/models.py (Users.add_to_xml, Modules, Modules.maintainer,
