Make it actually work.
	* mango/views.py (get_xmldoc): Make it actually work.

svn path=/branches/django/; revision=253

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/views.py (get_xmldoc): Make it actually work.
+
+2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/views.py (get_xmldoc, list_users, edit_user, view_index,
 	  list_accounts, add_account, list_mirrors, edit_mirror, add_mirror,
 	  list_foundationmembers, edit_foundationmember, list_modules): Adding
