--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/views.py (list_users): Limit the number of attributes that are
+	requested. Additionally, change the XML we pass on to the template.
+	The new XML uses the same node name as the name of the LDAP attribute.
+	* www/list_users.xsl: Look for the new element names.
+
+2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/views.py (get_xmldoc): Make it actually work.
 
 2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
