Remove even more dead code.
	* mango/views.py:Remove even more dead code.

svn path=/branches/django/; revision=257

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-06-25  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/views.py:Remove even more dead code.
+
+2008-06-25  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/views.py: Remove some dead code.
 
 2008-06-24  Olav Vitters  <olav@bkor.dhs.org>
